feat: python 작업 [태그]

--- a/flask/python_snippets.ipynb
+++ b/flask/python_snippets.ipynb
@@ -32,9 +32,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app \"__main__\" (lazy loading)\n",
+      " * Environment: production\n",
+      "   WARNING: This is a development server. Do not use it in a production deployment.\n",
+      "   Use a production WSGI server instead.\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [11/Jun/2022 18:22:41] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [11/Jun/2022 18:22:42] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n"
+     ]
+    }
+   ],
    "source": [
     "from flask import Flask\n",
     "app = Flask(__name__)\n",
@@ -65,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +107,10 @@
      "output_type": "stream",
      "text": [
       " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [22/Apr/2022 17:47:19] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [11/Jun/2022 18:40:18] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [11/Jun/2022 18:40:52] \"\u001b[37mGET /flask HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [11/Jun/2022 18:42:01] \"\u001b[32mGET /python HTTP/1.1\u001b[0m\" 308 -\n",
+      "127.0.0.1 - - [11/Jun/2022 18:42:01] \"\u001b[37mGET /python/ HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -126,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -145,8 +171,9 @@
      "output_type": "stream",
      "text": [
       " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [22/Apr/2022 17:59:15] \"\u001b[33mGET /name/gogosing HTTP/1.1\u001b[0m\" 404 -\n",
-      "127.0.0.1 - - [22/Apr/2022 17:59:30] \"\u001b[37mGET /hello/gogosing HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [11/Jun/2022 18:46:26] \"\u001b[37mGET //hello/test HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [11/Jun/2022 18:46:41] \"\u001b[37mGET //hello/eddi HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [11/Jun/2022 18:46:52] \"\u001b[37mGET //hello/3 HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -180,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -199,9 +226,8 @@
      "output_type": "stream",
      "text": [
       " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [22/Apr/2022 17:57:37] \"\u001b[32mGET /login HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [22/Apr/2022 17:57:37] \"\u001b[37mGET /success HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [22/Apr/2022 17:57:42] \"\u001b[37mGET /success HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [11/Jun/2022 18:53:54] \"\u001b[32mGET /login HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [11/Jun/2022 18:53:54] \"\u001b[37mGET /success HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -262,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -281,20 +307,18 @@
      "output_type": "stream",
      "text": [
       " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [22/Apr/2022 19:50:52] \"\u001b[37mOPTIONS /vueMember/register HTTP/1.1\u001b[0m\" 200 -\n",
-      "<ipython-input-36-2ed1d60d1235>:11: DeprecationWarning: 'encoding' is ignored and deprecated. It will be removed in Python 3.9\n",
-      "  params = json.loads(request.get_data(), encoding='utf-8')\n",
-      "127.0.0.1 - - [22/Apr/2022 19:50:52] \"\u001b[37mPOST /vueMember/register HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [11/Jun/2022 19:08:34] \"\u001b[37mOPTIONS /vueMember/register HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [11/Jun/2022 19:08:34] \"\u001b[37mPOST /vueMember/register HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "params:  {'id': 'test', 'pw': 'gogosing'}\n",
-      "params[key]:  test  key:  id\n",
-      "params[key]:  gogosing  key:  pw\n",
-      "test 님 가입이 완료되었습니다!\n"
+      "params:  {'id': 'hello', 'pw': 'hello'}\n",
+      "params[key]:  hello  key:  id\n",
+      "params[key]:  hello  key:  pw\n",
+      "hello 님 가입이 완료되었습니다!\n"
      ]
     }
    ],
@@ -309,7 +333,10 @@
     "\n",
     "@app.route('/vueMember/register',methods = ['POST'])\n",
     "def register():\n",
+    "    # 낮은 버전의 파이썬\n",
     "    params = json.loads(request.get_data(), encoding='utf-8')\n",
+    "    # 최신 버전의 파이썬 3.9\n",
+    "    #params = json.loads(request.get_data())\n",
     "    print(\"params: \", params)\n",
     "        \n",
     "    if len(params) == 0:\n",
@@ -339,6 +366,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "## 이번에는 DB에 데이터를 넣어보자!!!"
    ]
@@ -349,12 +383,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## 먼저 Ubuntu에 MySQL을 설치한다.\n",
+    "# 소프트웨어 패키지 업데이트\n",
+    "!sudo apt-get update"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 설치\n",
+    "!sudo apt-get install mysql-server"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 방화벽 해제\n",
+    "!sudo ufw allow mysql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MySQL 서비스 재시작(스펙이 떨어지는 경우 권장하지 않음)\n",
+    "#!sudo systemctl enable mysql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 파이썬 패키지 설치\n",
     "!pip install pymysql"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,20 +448,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Linux\n",
-    "# !mkdir -p res/mysql/\n",
+    "!mkdir -p res/mysql/\n",
     "\n",
     "# Windows\n",
-    "!mkdir res\\mysql"
+    "#!mkdir res\\mysql"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python_snippets.ipynb  res\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mysql 계정을 만들어야함\n",
+    "# sudo mysql -u root -p\n",
+    "# create schema `pydb` default character set utf8;\n",
+    "# create user eddi@localhost identified by 'eddi@123';\n",
+    "# grant all privileges on pydb.* to eddi@localhost;\n",
+    "# flush privileges;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +512,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "userinfo\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls res/mysql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,14 +561,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<pymysql.connections.Connection object at 0x00000262AB11D580>\n"
+      "<pymysql.connections.Connection object at 0x7f7fb2c3b650>\n"
      ]
     }
    ],
@@ -468,14 +592,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<pymysql.cursors.Cursor object at 0x00000262AB11D3A0>\n"
+      "<pymysql.cursors.Cursor object at 0x7f7fb2c39c10>\n"
      ]
     }
    ],
@@ -489,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
